Refactored the homepage. Everything is now contained within 3 columns. Added a customer review wing to the products section of the homepage.

--- a/SmallBusiness.css
+++ b/SmallBusiness.css
@@ -34,6 +34,10 @@ p.body-text {
     padding-left: 5px;
 }
 
+.background-color {
+    background-color: #c9c9c9;
+}
+
 #description-text {
     float:right;
 }
@@ -43,4 +47,25 @@ p.body-text {
 
 .carousel-inner {
     
+}
+
+.customer-example-redirect {
+    margin-bottom: 0px;
+    margin-top: 10px;
+    padding: 5px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+#top-example {
+    margin-top: 968px;
+}
+
+.customer-review-photo-homepage {
+    width: 130;
+    border-radius: 70px;
+    padding: 0px;
+    border: 1px rgb(0, 177, 247) solid;
 }
